# cpp20-study

./: .gitignore  .gitmodules  CMakeLists.txt  toolchain.cmake
.devcontainer/: devcontainer.json
.github/workflows/: CMake.yml  cmake.yml
.github/workflows/dead/: gcc.yml
0.1cross-compile/: CMakeLists.txt  hello-world.cpp
1.4.4 std::decltype/: CMakeLists.txt  declval.cpp  main.cpp
1.4.5 模板类型推导CTAD/: CMakeLists.txt  main.cpp
1.5 函数对象/: CMakeLists.txt  README  define_a_functional_object.cpp  lambda_expression.cpp  std::functional.cpp
2.1 overloaded function principle/: CMakeLists.txt  main.cpp
2.1.5 SFINAE/: CMakeLists.txt  main.cpp
2.3.1 Visitor Pattern/: CMakeLists.txt  main.cpp
5.3 TypeList/: CMakeLists.txt  TypeList.cpp  TypeList.hpp
5.4 Example/: CMakeLists.txt  DataTable.cpp  DataTable.hpp  FindShortestPath.cpp  TypeList.hpp
6.1 constexpr变量/: CMakeLists.txt  constexpr.cpp
6.3 折叠表达式/: CMakeLists.txt  main.cpp
6.4 constexpr函数/: CMakeLists.txt  consteval.cpp  编译时内存分配.cpp
6.5 非类型模板参数/: CMakeLists.txt  main.cpp
