include(CheckIPOSupported)
check_ipo_supported(RESULT supported OUTPUT error)
set(CMAKE_CXX_FLAGS_DEBUG )
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS} -Ofast -fno-exceptions -fno-unwind-tables -fno-asynchronous-unwind-tables -fno-rtti")

add_executable(main6_4_1 consteval.cpp)
add_executable(main6_4_2 编译时内存分配.cpp)
target_include_directories(main6_4_1 PUBLIC ${CMAKE_SOURCE_DIR}/fast_io/include/)
target_include_directories(main6_4_2 PUBLIC ${CMAKE_SOURCE_DIR}/fast_io/include/)
if(supported)
    message(STATUS "IPO/LTO enabled")
    set_property(TARGET main6_4_1 PROPERTY INTERPROCEDURAL_OPTIMIZATION TRUE)
    set_property(TARGET main6_4_2 PROPERTY INTERPROCEDURAL_OPTIMIZATION TRUE)
else()
    message(STATUS "IPO/LTO not supported: <${error}>")
endif()
